src/objects/Contact_State_ID__c.object
<CustomObject>
    <description>Unique IDs for attorneys and court reporters for each state such as a state bar # or CSR #.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact State IDs</relationshipLabel>
        <relationshipName>Contact_State_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <label>Contact State ID</label>
    <nameField>
        <displayFormat>StateID-{0000}</displayFormat>
        <label>State ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact State IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>